kubernetes/ems-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-backend
  namespace: ems-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ems-backend
  template:
    metadata:
      labels:
        app: ems-backend
    spec:
      containers:
        - name: ems-backend
          image: ivantrajkov/ems-backend:latest
          ports:
            - containerPort: 8080
