kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-frontend
  namespace: ems-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ems-frontend
  template:
    metadata:
      labels:
        app: ems-frontend
    spec:
      containers:
        - name: ems-frontend
          image: ivantrajkov/ems-frontend:latest
          ports:
            - containerPort: 3000
