kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ems-namespace
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
