kubernetes/ems-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems-backend
  namespace: ems-namespace
spec:
  selector:
    app: ems-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
