kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems-frontend
  namespace: ems-namespace
spec:
  selector:
    app: ems-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
