kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ems-ingress
  namespace: ems-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ems.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: ems-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ems-frontend
                port:
                  number: 80
